feat Launch4J * Configure launch4j to create a windows exe.