@@ -12,26 +12,15 @@
 
 	<groupId>com.axokoi</groupId>
 	<artifactId>BandurriaJ</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-
-					<source>11</source>
-					<target>11</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
-		</plugins>
-	</build>
-
+	<properties>
+		<!--spring profile for executable-->
+		<spring.profile>-Dspring.profiles.active=prod</spring.profile>
+		<java.fx.path>--module-path "ADD YOUR javafx sdk path here"</java.fx.path>
+		<java.fx.modules>--add-modules javafx.controls,javafx.fxml</java.fx.modules>
+		<jre.path>"ADD YOUR jre 11 path here"</jre.path>
+	</properties>
 	<repositories>
 		<repository>
 			<id>central</id>
@@ -111,4 +100,76 @@
 		<version>1.0.2</version>
 	</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>11</source>
+					<target>11</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+
+		<!--Launch4J-->
+
+			<plugin>
+				<groupId>com.akathist.maven.plugins.launch4j</groupId>
+				<artifactId>launch4j-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>l4j-gui</id>
+						<phase>package</phase>
+						<goals><goal>launch4j</goal></goals>
+						<configuration>
+							<headerType>gui</headerType>
+							<outfile>target/BandurriaJ.exe</outfile>
+							<jar>target/${artifactId}-${version}.jar</jar>
+							<errTitle>Bandurria J</errTitle>
+							<jre>
+								<path>${jre.path}</path>
+								<minVersion>1.11.0</minVersion>
+								<opts>
+									<opt>${spring.profile}</opt>
+									<opt>${java.fx.path}</opt>
+									<opt>${java.fx.modules}</opt>
+								</opts>
+							</jre>
+							<versionInfo>
+								<fileVersion>1.0.0.0</fileVersion>
+								<txtFileVersion>1.0.0.0</txtFileVersion>
+								<fileDescription>BandurriaJ - CD Catalogue</fileDescription>
+								<copyright>By Axokoi - GPU V3 license</copyright>
+								<productVersion>1.0.0.0</productVersion>
+								<txtProductVersion>1.0.0.0</txtProductVersion>
+								<productName>BandurriaJ</productName>
+								<internalName>BandurriaJ</internalName>
+								<originalFilename>BandurriaJ.exe</originalFilename>
+							</versionInfo>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>assembly</id>
+						<phase>package</phase>
+						<goals><goal>single</goal></goals>
+						<configuration>
+							<descriptors>
+								<descriptor>assembly.xml</descriptor>
+							</descriptors>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
